feat: swagger endpoints
